Ajuste fuente marquesinas - Ajuste margen marquesina en Formación - ajuste problema de overflow en Novedades y Producciones.

--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/themeStyles.module.scss";
 
+.overflow_wrapper{
+    overflow: hidden;
+}
+
 .pin_block {
     @include container-width-1;
     display: grid;
