--- a/pages/formacion/formacion.module.scss
+++ b/pages/formacion/formacion.module.scss
@@ -9,14 +9,14 @@
         }
     }
 
-    div[data-id="marquee_1"]{
+    div[data-id="marquee_1"], div[data-id="marquee_2"]{
         margin-bottom: calc(50px + (200 - 50) * ((100vw - 1200px) / (3840 - 1200)));
         @media screen and (max-width: 1024px){
             margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
         }
     }
     
-    div[data-id="marquee_2"]{
+    div[data-id="marquee_3"]{
         margin-bottom: calc(95px + (280 - 95) * ((100vw - 1200px) / (3840 - 1200)));
     }
 
